--- a/index.html
+++ b/index.html
@@ -19,17 +19,123 @@
         </div>
         <div class="col-4"></div>
     </div>
-    <hr>
-    <table>
-        <thead>
-        <tr>
-            <th>ID</th>
-            <th>NAME</th>
-            <th>ROAST</th>
-        </tr>
-        </thead>
-        <tbody id="coffees"></tbody>
-    </table>
+    <div class="row">
+        <div class="col-12">
+            <hr>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-6">
+            <div class="row">
+                <div class="col-6">
+                    <h3> New Coffee
+                        <small> light</small>
+                    </h3>
+                </div>
+                <div class="col-6">
+                    <h3> French dark
+                        <small> dark</small>
+                    </h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <h3> Italian dar
+                        <small> dark</small>
+                    </h3>
+                </div>
+                <div class="col-6">
+                    <h3> Viennese da
+                        <small> dark</small>
+                    </h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <h3> Espresso da
+                        <small> dark</small>
+                    </h3>
+                </div>
+                <div class="col-6">
+                    <h3> European da
+                        <small> dark</small>
+                    </h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <h3> New Orleans
+                        <small> dark</small>
+                    </h3>
+                </div>
+                <div class="col-6">
+                    <h3> Continental
+                        <small> dark</small>
+                    </h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <h3> High dark
+                        <small> dark</small>
+                    </h3>
+                </div>
+                <div class="col-6">
+                    <h3> Breakfast
+                        <small> medium</small>
+                    </h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <h3> American
+                        <small> medium</small>
+                    </h3>
+                </div>
+                <div class="col-6">
+                    <h3> City medium
+                        <small> dark</small>
+                    </h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <h3> Cinnamon
+                        <small> light</small>
+                    </h3>
+                </div>
+                <div class="col-6">
+                    <h3> Half City
+                        <small> light</small>
+                    </h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <h3> Light City
+                        <small> light</small>
+                    </h3>
+                </div>
+                <div class="col-6">
+                    <h3> Empty<
+                        <small> Empty</small>
+                    </h3>
+                </div>
+            </div>
+            <div class="col-6">
+            </div>
+        </div>
+    </div>
+    <!--<table>-->
+    <!--<thead>-->
+    <!--<tr>-->
+    <!--<th>ID</th>-->
+    <!--<th>NAME</th>-->
+    <!--<th>ROAST</th>-->
+    <!--</tr>-->
+    <!--</thead>-->
+    <!--<tbody id="coffees"></tbody>-->
+    <!--</table>-->
 
     <!--Commented Form for later use-->
     <!--<form>-->
@@ -42,6 +148,7 @@
     <!--</select>-->
     <!--<input id="submit" type="submit"/>-->
     <!--</form>-->
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
