FORGOT TO BRANCH AGAIN... bootstrap styled left content area, started right forms, finished form 1

--- a/index.html
+++ b/index.html
@@ -24,45 +24,45 @@
             <hr>
         </div>
     </div>
-    <div class="row">
+    <div class="row content-row">
         <div class="col-6">
-            <div class="row">
+            <div class="row list-row">
                 <div class="col-6">
                     <h3> New Coffee
                         <small> light</small>
                     </h3>
                 </div>
                 <div class="col-6">
-                    <h3> French dark
+                    <h3> French
                         <small> dark</small>
                     </h3>
                 </div>
             </div>
-            <div class="row">
+            <div class="row list-row">
                 <div class="col-6">
-                    <h3> Italian dar
+                    <h3> Italian
                         <small> dark</small>
                     </h3>
                 </div>
                 <div class="col-6">
-                    <h3> Viennese da
-                        <small> dark</small>
-                    </h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-6">
-                    <h3> Espresso da
-                        <small> dark</small>
-                    </h3>
-                </div>
-                <div class="col-6">
-                    <h3> European da
+                    <h3> Viennese
                         <small> dark</small>
                     </h3>
                 </div>
             </div>
-            <div class="row">
+            <div class="row list-row">
+                <div class="col-6">
+                    <h3> Espresso
+                        <small> dark</small>
+                    </h3>
+                </div>
+                <div class="col-6">
+                    <h3> European
+                        <small> dark</small>
+                    </h3>
+                </div>
+            </div>
+            <div class="row list-row">
                 <div class="col-6">
                     <h3> New Orleans
                         <small> dark</small>
@@ -74,9 +74,9 @@
                     </h3>
                 </div>
             </div>
-            <div class="row">
+            <div class="row list-row">
                 <div class="col-6">
-                    <h3> High dark
+                    <h3> High
                         <small> dark</small>
                     </h3>
                 </div>
@@ -86,19 +86,19 @@
                     </h3>
                 </div>
             </div>
-            <div class="row">
+            <div class="row list-row">
                 <div class="col-6">
                     <h3> American
                         <small> medium</small>
                     </h3>
                 </div>
                 <div class="col-6">
-                    <h3> City medium
-                        <small> dark</small>
+                    <h3> City
+                        <small> medium</small>
                     </h3>
                 </div>
             </div>
-            <div class="row">
+            <div class="row list-row">
                 <div class="col-6">
                     <h3> Cinnamon
                         <small> light</small>
@@ -110,33 +110,99 @@
                     </h3>
                 </div>
             </div>
-            <div class="row">
+            <div class="row list-row">
                 <div class="col-6">
                     <h3> Light City
                         <small> light</small>
                     </h3>
                 </div>
                 <div class="col-6">
-                    <h3> Empty<
+                    <h3> Empty
                         <small> Empty</small>
                     </h3>
                 </div>
             </div>
-            <div class="col-6">
+        </div>
+        <div class="col-6">
+            <!--form 1 for filtering covfefes-->
+            <form>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-12">
+                            <label class="font-weight-bold text-bottom m-0" for="roastFilter">
+                                Roast
+                            </label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <select class="form-control" id="roastFilter" name="roastFilter">
+                                <option value="all">All</option>
+                                <option value="light">Light</option>
+                                <option value="medium">Medium</option>
+                                <option value="dark">Dark</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <label class="font-weight-bold text-bottom mb-0 mt-3" for="coffeeFilter">
+                                Covfefe Name
+                            </label>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col-12">
+                            <input class="form-control" type="text" id="coffeeFilter" name="coffeeFilter">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <button class="btn-lg btn-block bg-success" type="submit">Submit</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+            <div class="row">
+                <div class="col-12">
+                    <hr>
+                </div>
             </div>
+            <!--form 2 for adding covfefes-->
+            <form>
+                <div class="row">
+                    <div class="col-12">
+                        putthinghere
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        putthinghere
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        putthinghere
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        putthinghere
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        putthinghere
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        putthinghere
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
-    <!--<table>-->
-    <!--<thead>-->
-    <!--<tr>-->
-    <!--<th>ID</th>-->
-    <!--<th>NAME</th>-->
-    <!--<th>ROAST</th>-->
-    <!--</tr>-->
-    <!--</thead>-->
-    <!--<tbody id="coffees"></tbody>-->
-    <!--</table>-->
-
     <!--Commented Form for later use-->
     <!--<form>-->
     <!--<label for="roast-selection"></label>-->
