--- a/index.html
+++ b/index.html
@@ -170,34 +170,45 @@
             </div>
             <!--form 2 for adding covfefes-->
             <form>
-                <div class="row">
-                    <div class="col-12">
-                        putthinghere
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-12 text-center">
+                            <h1>Add a Coffee</h1>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-12">
-                        putthinghere
+                    <div class="row">
+                        <div class="col-12">
+                            <label class="font-weight-bold text-bottom m-0" for="coffeeFilter">
+                                Roast
+                            </label>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-12">
-                        putthinghere
+                    <div class="row">
+                        <div class="col-12">
+                            <select class="form-control" id="roastAdd" name="roastAdd">
+                                <option value="all">All</option>
+                                <option value="all">All</option>
+                                <option value="all">All</option>
+                                <option value="all">All</option>
+                            </select>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-12">
-                        putthinghere
+                    <div class="row">
+                        <div class="col-12">
+                            <label class="font-weight-bold text-bottom mb-0 mt-3" for="coffeeFilter">
+                                Name
+                            </label>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-12">
-                        putthinghere
+                    <div class="row mb-3">
+                        <div class="col-12">
+                            <input class="form-control" type="text" id="coffeeAdd" name="coffeeAdd">
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-12">
-                        putthinghere
+                    <div class="row">
+                        <div class="col-12">
+                            <button class="btn-lg btn-block bg-success" type="submit">Submit</button>
+                        </div>
                     </div>
                 </div>
             </form>
