--- a/index.html
+++ b/index.html
@@ -25,103 +25,8 @@
         </div>
     </div>
     <div class="row content-row">
-        <div class="col-6">
-            <div class="row list-row">
-                <div class="col-6">
-                    <h3> New Coffee
-                        <small> light</small>
-                    </h3>
-                </div>
-                <div class="col-6">
-                    <h3> French
-                        <small> dark</small>
-                    </h3>
-                </div>
-            </div>
-            <div class="row list-row">
-                <div class="col-6">
-                    <h3> Italian
-                        <small> dark</small>
-                    </h3>
-                </div>
-                <div class="col-6">
-                    <h3> Viennese
-                        <small> dark</small>
-                    </h3>
-                </div>
-            </div>
-            <div class="row list-row">
-                <div class="col-6">
-                    <h3> Espresso
-                        <small> dark</small>
-                    </h3>
-                </div>
-                <div class="col-6">
-                    <h3> European
-                        <small> dark</small>
-                    </h3>
-                </div>
-            </div>
-            <div class="row list-row">
-                <div class="col-6">
-                    <h3> New Orleans
-                        <small> dark</small>
-                    </h3>
-                </div>
-                <div class="col-6">
-                    <h3> Continental
-                        <small> dark</small>
-                    </h3>
-                </div>
-            </div>
-            <div class="row list-row">
-                <div class="col-6">
-                    <h3> High
-                        <small> dark</small>
-                    </h3>
-                </div>
-                <div class="col-6">
-                    <h3> Breakfast
-                        <small> medium</small>
-                    </h3>
-                </div>
-            </div>
-            <div class="row list-row">
-                <div class="col-6">
-                    <h3> American
-                        <small> medium</small>
-                    </h3>
-                </div>
-                <div class="col-6">
-                    <h3> City
-                        <small> medium</small>
-                    </h3>
-                </div>
-            </div>
-            <div class="row list-row">
-                <div class="col-6">
-                    <h3> Cinnamon
-                        <small> light</small>
-                    </h3>
-                </div>
-                <div class="col-6">
-                    <h3> Half City
-                        <small> light</small>
-                    </h3>
-                </div>
-            </div>
-            <div class="row list-row">
-                <div class="col-6">
-                    <h3> Light City
-                        <small> light</small>
-                    </h3>
-                </div>
-                <div class="col-6">
-                    <h3> Empty
-                        <small> Empty</small>
-                    </h3>
-                </div>
-            </div>
+        <div class="col-6 py-3">
+            <div id="coffees" class="row list-row"></div>
         </div>
         <div class="col-6">
             <!--form 1 for filtering covfefes-->
@@ -173,7 +78,7 @@
                 <div class="form-group">
                     <div class="row">
                         <div class="col-12 text-center">
-                            <h1>Add a Coffee</h1>
+                            <h1>Add a Covfefe</h1>
                         </div>
                     </div>
                     <div class="row">
@@ -187,9 +92,9 @@
                         <div class="col-12">
                             <select class="form-control" id="roastAdd" name="roastAdd">
                                 <option value="all">All</option>
-                                <option value="all">All</option>
-                                <option value="all">All</option>
-                                <option value="all">All</option>
+                                <option value="light">Light</option>
+                                <option value="medium">Medium</option>
+                                <option value="dark">Dark</option>
                             </select>
                         </div>
                     </div>
