--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <title>Covfefe</title>
 </head>
 <body>
+    <div class="image">
+    <img src="images/pexels-photo-434213%20(1).jpeg">
+    </div>
 <div class="container-fluid py-2 px-5">
     <div class="row">
         <div class="col-4"></div>
@@ -118,6 +121,14 @@
                 </div>
             </form>
         </div>
+    </div>
+    <div class="col-12 social padding">
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-google-plus"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-youtube"></i></a>
+
     </div>
     <!--Commented Form for later use-->
     <!--<form>-->
