--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Covfefe</title>
 </head>
 <body>
-    <div class="image">
+<!--<div class="image">-->
     <!--<img src="images/pexels-photo-434213%20(1).jpeg">-->
-    </div>
+<!--</div>-->
 <div class="container-fluid py-2 px-5">
     <div class="row">
         <div class="col-4"></div>
@@ -114,44 +115,97 @@
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <button class="btn-lg btn-block bg-success" type="submit">Submit</button>
+                            <button id="addCoffee" class="btn-lg btn-block bg-success" type="submit">Submit</button>
                         </div>
                     </div>
                 </div>
             </form>
         </div>
     </div>
-    <div class="col-12 social padding">
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-google-plus"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-youtube"></i></a>
 
+
+            <!--Connect with-->
+            <!--<div class="container-fluid padding">-->
+    <div class="row padding">
+        <div class="col-12">
+            <hr class="my-4">
+            <h2 class="text-center">Connect</h2>
+        </div>
+        <hr class="my-4">
+        <div class="icon-bar col-12 social padding">
+            <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+            <a href="https://plus.google.com/discover"><i class="fab fa-google-plus"></i></a>
+            <a href="https://www.instagram.com/?hl=en"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+        </div>
     </div>
-    <!--Commented Form for later use-->
-    <!--<form>-->
-    <!--<label for="roast-selection"></label>-->
-    <!--<select id="roast-selection">-->
-    <!--<option>All</option>-->
-    <!--<option>light</option>-->
-    <!--<option>medium</option>-->
-    <!--<option>dark</option>-->
-    <!--</select>-->
-    <!--<input id="submit" type="submit"/>-->
-    <!--</form>-->
+            <!--</div>-->
 
+    <div class="row">
+        <div class="col-12">
+            <footer>
+                <div class="contaier-fluid padding">
+                    <div class="row text-center">
+                        <div class="col-md-4">
+                            <hr class="light">
+                            <h5>Connect Now</h5>
+                            <hr class="light">
+                            <p>555-555-5555</p>
+                            <p>email@myemail.com</p>
+                            <p>100 Street Name</p>
+                            <p>City, State, 00000</p>
+                        </div>
+                        <div class="col-md-4">
+                            <hr class="light">
+                            <h5>Our Hours</h5>
+                            <hr clsss="light">
+                            <p>Monday: 9am - 5pm</p>
+                            <p>Saturday: 10am - 4pm</p>
+                            <p>Sunday: 7am-1pm</p>
+                        </div>
+                        <div class="col-md-4">
+                            <hr class="light">
+                            <h5>Service Area</h5>
+                            <hr class="light">
+                            <p>City, State, 00000</p>
+                            <p>City, State, 00000</p>
+                            <p>City, State, 00000</p>
+                            <p>City, State, 00000</p>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-            crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+                        </div>
+                        <div class="col-12">
+                            <hr class="light">
+                            <h5>&copy; Dewey&LaMar.com</h5>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+        </div>
+    </div>
 </div>
+<!--Commented Form for later use-->
+<!--<form>-->
+<!--<label for="roast-selection"></label>-->
+<!--<select id="roast-selection">-->
+<!--<option>All</option>-->
+<!--<option>light</option>-->
+<!--<option>medium</option>-->
+<!--<option>dark</option>-->
+<!--</select>-->
+<!--<input id="submit" type="submit"/>-->
+<!--</form>-->
+
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+<script src="main.js"></script>
 </body>
 </html>
