--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     </div>
     <div class="row content-row">
         <div class="col-6 py-3">
-            <div id="coffees" class="row list-row"></div>
+            <div id="coffees" class="row list-row">
+
+            </div>
         </div>
         <div class="col-6">
             <!--form 1 for filtering covfefes-->
